[package]
name = "placehero"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
reqwest = { workspace = true }
html5gum = "0.7.0"
megalodon = "1.0.0"
tracing.workspace = true
xilem = { version = "0.3.0", path = "../xilem" }
image = { workspace = true, features = ["jpeg", "png"] }
anyhow = "1.0.98"

[lints]
workspace = true
