[package]
name = "placehero"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
reqwest = { workspace = true }
html5gum = "0.8.0"
megalodon = "1.0.3"
tracing.workspace = true
xilem = { workspace = true }
image = { workspace = true, features = ["jpeg", "png"] }
anyhow = "1.0.100"
blurhash = "0.2.3"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["rc"] }

[lints]
workspace = true
