[package]
name = "tree_arena"
version = "0.1.0"
description = "An arena allocated tree."
keywords = ["arena", "tree"]
categories = ["algorithms", "data-structures"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true # all features are enabled - this means that the generated docs are for the safe version
# There are no platform specific docs.
default-target = "x86_64-unknown-linux-gnu"
targets = []

[features]
# This crate contains two implementations of a tree for use in masonry, one safe and the other unsafe.
# The safe tree is known to work, and serves as the baseline implementation and is used by default.
# The unsafe tree leverages a hashmap as an arena and is designed for higher performance: it leverages unsafe code to achieve this.
# The unsafe tree is not yet fully tested, and is not used by default.
default = ["safe_tree"]
safe_tree = []
# This flag implements both versions but only exports one.
# This is useful when developing the crate.
implement_both = []

[dependencies]
hashbrown.workspace = true

[lints]
workspace = true
