[package]
name = "xilem"
version.workspace = true
description = "A next-generation cross-platform Rust UI framework."
keywords = ["gui", "ui", "native", "gpu", "performance"]
categories = ["gui", "graphics", "internationalization", "accessibility"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
exclude = [
    "/resources/fonts/roboto_flex/",
    "/resources/data/http_cats_status/",
    "/resources/data/emoji_names/",
]

[package.metadata.docs.rs]
all-features = true
# There are no platform specific docs.
default-target = "x86_64-unknown-linux-gnu"
targets = []
# rustdoc-scrape-examples tracking issue https://github.com/rust-lang/rust/issues/88791
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

# This makes the examples discoverable to (e.g.) Android GPU inspector without needing to provide the full name manually.
# Do not use when releasing a production app.
[package.metadata.android.application]
debuggable = true

[[package.metadata.android.uses_permission]]
# Needed for http_cats
name = "android.permission.INTERNET"

[features]
default = ["masonry/default", "masonry_winit/default"]

[dependencies]
xilem_core.workspace = true
masonry.workspace = true
masonry_winit.workspace = true
winit.workspace = true
tracing.workspace = true
vello.workspace = true
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "time", "sync"] }

[dev-dependencies]
# Used for `variable_clock`
time = { workspace = true, features = ["local-offset"] }

# Used for http_cats
reqwest = { workspace = true }
image = { workspace = true, features = ["jpeg"] }

# Make wgpu use tracing for its spans.
profiling = { version = "1.0.17", features = ["profile-with-tracing"] }
anyhow = "1.0.100"

[target.'cfg(target_os = "android")'.dev-dependencies]
winit = { features = ["android-native-activity"], workspace = true }

[lints]
workspace = true

[[example]]
name = "mason"
# This actually enables scraping for all examples, not just this one.
# However it is possible to set doc-scrape-examples to false for other specific examples.
doc-scrape-examples = true

[[example]]
name = "calc"

[[example]]
name = "stopwatch"

[[example]]
name = "to_do_mvc"

[[example]]
name = "variable_clock"

[[example]]
name = "emoji_picker"

[[example]]
name = "http_cats"

# Also add to ANDROID_TARGETS in .github/ci.yml if adding a new Android example
# A custom example target which uses the same `mason.rs` file but for android
[[example]]
name = "mason_android"
path = "examples/android/mason.rs"
# cdylib is required for cargo-apk
crate-type = ["cdylib"]

[[example]]
name = "calc_android"
path = "examples/android/calc.rs"
# cdylib is required for cargo-apk
crate-type = ["cdylib"]

[[example]]
name = "stopwatch_android"
path = "examples/android/stopwatch.rs"
# cdylib is required for cargo-apk
crate-type = ["cdylib"]

[[example]]
name = "to_do_mvc_android"
path = "examples/android/to_do_mvc.rs"
# cdylib is required for cargo-apk
crate-type = ["cdylib"]

[[example]]
name = "variable_clock_android"
path = "examples/android/variable_clock.rs"
# cdylib is required for cargo-apk
crate-type = ["cdylib"]

[[example]]
name = "emoji_picker_android"
path = "examples/android/emoji_picker.rs"
# cdylib is required for cargo-apk
crate-type = ["cdylib"]

[[example]]
name = "http_cats_android"
path = "examples/android/http_cats.rs"
# cdylib is required for cargo-apk
crate-type = ["cdylib"]
