[package]
name = "xilem_core"
version = "0.1.0"
description = "Common core of the Xilem Rust UI framework."
keywords = ["xilem", "ui", "reactive", "performance"]
categories = ["gui"]
edition.workspace = true
license.workspace = true
repository.workspace = true

publish = false # We'll publish this alongside Xilem 0.2

[features]
default = ["std"]
std = []

[dependencies]
tracing.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
# xilem_core is entirely platform-agnostic, so only display docs for one platform
targets = []
features = ["std"]
