[package]
name = "xilem_core"
version.workspace = true # We mimic Xilem's version
description = "Common core of the Xilem Rust UI framework."
keywords = ["xilem", "ui", "reactive", "performance"]
categories = ["gui"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[package.metadata.docs.rs]
all-features = true
# There are no platform specific docs.
default-target = "x86_64-unknown-linux-gnu"
targets = []
# rustdoc-scrape-examples tracking issue https://github.com/rust-lang/rust/issues/88791
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[features]
kurbo = ["dep:kurbo"]

[dependencies]
tracing.workspace = true
kurbo = { optional = true, workspace = true }

[lints]
workspace = true

[[example]]
name = "user_interface"
# This actually enables scraping for all examples, not just this one.
# However it is possible to set doc-scrape-examples to false for other specific examples.
doc-scrape-examples = true
