[package]
name = "xilem_core2"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]

[lints]
workspace = true

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
# xilem_core is entirely platform-agnostic, so only display docs for one platform
targets = []
