[package]
name = "xilem_web"
version.workspace = true # We mimic Xilem's version
description = "HTML DOM frontend for the Xilem Rust UI framework."
keywords = ["xilem", "html", "svg", "web", "ui"]
categories = ["gui", "web-programming"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[package.metadata.docs.rs]
all-features = true
# There are no platform specific docs.
default-target = "x86_64-unknown-linux-gnu"
targets = []

[features]
default = []
# This interns some often used strings, such as element tags ("div" etc.), which slightly improves performance when creating elements at the cost of a bigger wasm binary
intern_strings = ["wasm-bindgen/enable-interning"]

[dependencies]
futures = "0.3.31"
peniko.workspace = true
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
xilem_core = { workspace = true, features = ["kurbo"] }

[dependencies.web-sys]
version = "0.3.77"
features = [
    "console",
    "CssStyleDeclaration",
    "Document",
    "DocumentFragment",
    "DomTokenList",
    "Element",
    "Event",
    "AddEventListenerOptions",
    "HtmlElement",
    "Node",
    "NodeList",
    "ResizeObserver",
    "ResizeObserverEntry",
    "DomRectReadOnly",
    "MathMlElement",
    "SvgElement",
    "SvgaElement",
    "SvgAnimateElement",
    "SvgAnimateMotionElement",
    "SvgAnimateTransformElement",
    "SvgCircleElement",
    "SvgClipPathElement",
    "SvgDefsElement",
    "SvgDescElement",
    "SvgEllipseElement",
    "SvgfeBlendElement",
    "SvgfeColorMatrixElement",
    "SvgfeComponentTransferElement",
    "SvgfeCompositeElement",
    "SvgfeConvolveMatrixElement",
    "SvgfeDiffuseLightingElement",
    "SvgfeDisplacementMapElement",
    "SvgfeDistantLightElement",
    "SvgfeDropShadowElement",
    "SvgfeFloodElement",
    "SvgfeFuncAElement",
    "SvgfeFuncBElement",
    "SvgfeFuncGElement",
    "SvgfeFuncRElement",
    "SvgfeGaussianBlurElement",
    "SvgfeImageElement",
    "SvgfeMergeElement",
    "SvgfeMergeNodeElement",
    "SvgfeMorphologyElement",
    "SvgfeOffsetElement",
    "SvgfePointLightElement",
    "SvgfeSpecularLightingElement",
    "SvgfeSpotLightElement",
    "SvgfeTileElement",
    "SvgfeTurbulenceElement",
    "SvgFilterElement",
    "SvgForeignObjectElement",
    "SvggElement",
    # "SvgHatchElement",
    # "SvgHatchpathElement",
    "SvgImageElement",
    "SvgLineElement",
    "SvgLinearGradientElement",
    "SvgMarkerElement",
    "SvgMaskElement",
    "SvgMetadataElement",
    "SvgmPathElement",
    "SvgPathElement",
    "SvgPatternElement",
    "SvgPolygonElement",
    "SvgPolylineElement",
    "SvgRadialGradientElement",
    "SvgRectElement",
    "SvgScriptElement",
    "SvgSetElement",
    "SvgStopElement",
    "SvgStyleElement",
    "SvgsvgElement",
    "SvgSwitchElement",
    "SvgSymbolElement",
    "SvgTextElement",
    "SvgTextPathElement",
    "SvgTitleElement",
    "SvgtSpanElement",
    "SvgUseElement",
    "SvgViewElement",
    "Text",
    "Window",
    "FocusEvent",
    "HtmlInputElement",
    "InputEvent",
    "KeyboardEvent",
    "MouseEvent",
    "PointerEvent",
    "WheelEvent",
    "HtmlAnchorElement",
    "HtmlAreaElement",
    "HtmlAudioElement",
    "HtmlBrElement",
    "HtmlButtonElement",
    "HtmlCanvasElement",
    "HtmlDataElement",
    "HtmlDataListElement",
    "HtmlDetailsElement",
    "HtmlDialogElement",
    "HtmlDivElement",
    "HtmlDListElement",
    "HtmlEmbedElement",
    "HtmlFieldSetElement",
    "HtmlFormElement",
    "HtmlHeadingElement",
    "HtmlHrElement",
    "HtmlIFrameElement",
    "HtmlImageElement",
    "HtmlInputElement",
    "HtmlLabelElement",
    "HtmlLegendElement",
    "HtmlLiElement",
    "HtmlLinkElement",
    "HtmlMapElement",
    "HtmlMediaElement",
    "HtmlMenuElement",
    "HtmlMeterElement",
    "HtmlModElement",
    "HtmlObjectElement",
    "HtmlOListElement",
    "HtmlOptGroupElement",
    "HtmlOptionElement",
    "HtmlOutputElement",
    "HtmlParagraphElement",
    "HtmlPictureElement",
    "HtmlPreElement",
    "HtmlProgressElement",
    "HtmlQuoteElement",
    "HtmlScriptElement",
    "HtmlSelectElement",
    "HtmlSlotElement",
    "HtmlSourceElement",
    "HtmlSpanElement",
    "HtmlTableCaptionElement",
    "HtmlTableCellElement",
    "HtmlTableColElement",
    "HtmlTableElement",
    "HtmlTableRowElement",
    "HtmlTableSectionElement",
    "HtmlTemplateElement",
    "HtmlTimeElement",
    "HtmlTextAreaElement",
    "HtmlTrackElement",
    "HtmlUListElement",
    "HtmlVideoElement",
]

[lints]
workspace = true
