[package]
name = "xilem_web_core"
version = "0.1.0"
description = "Common core of the Xilem Rust UI framework."
keywords = ["xilem", "ui", "reactive", "performance"]
categories = ["gui"]
publish = false                                             # Until it's ready
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[package.metadata.docs.rs]
all-features = true
# rustdoc-scrape-examples tracking issue https://github.com/rust-lang/rust/issues/88791
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[lints]
workspace = true

[dependencies]
