[package]
authors = ["Olivier FAURE <couteaubleu@gmail.com>"]
categories = ["gui"]
description = "Data-oriented Rust UI design toolkit."
edition = "2021"
keywords = ["gui", "ui", "toolkit"]
license.workspace = true
name = "masonry"
readme = "README.md"
repository = "https://github.com/PoignardAzur/masonry-rs"
rust-version = "1.75"
version = "0.1.3"

[lints]
workspace = true

# NOTE: Make sure to keep wgpu version in sync with the version badge in README.md
[dependencies]
fnv = "1.0.7"
instant = { version = "0.1.6", features = ["wasm-bindgen"] }
smallvec = "1.6.1"
tracing = "0.1.29"
image = "0.24.0"
once_cell = "1.9.0"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
vello.workspace = true
kurbo = "0.11.0"
futures-intrusive = "0.5.0"
pollster = "0.3.0"
parley.workspace = true
wgpu = { version = "0.19.3" }
winit.workspace = true

[dev-dependencies]
float-cmp = { version = "0.8.0", features = ["std"], default-features = false }
insta = { version = "1.8.0" }
assert_matches = "1.5.0"
tempfile = "3.10.1"

[[example]]
name = "simple_image"
#required-features = ["image", "png"]
