[package]
name = "masonry"
version = "0.2.0"
description = "Data-oriented Rust UI design toolkit."
keywords = ["gui", "ui", "toolkit"]
categories = ["gui", "internationalization", "accessibility"]
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[package.metadata.docs.rs]
all-features = true
# rustdoc-scrape-examples tracking issue https://github.com/rust-lang/rust/issues/88791
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[lints]
workspace = true

[dependencies]
vello.workspace = true
wgpu.workspace = true
kurbo.workspace = true
parley.workspace = true
winit.workspace = true
smallvec.workspace = true
tracing.workspace = true
fnv.workspace = true
instant = { workspace = true, features = ["wasm-bindgen"] }
image = "0.24.0"
once_cell = "1.9.0"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
futures-intrusive = "0.5.0"
pollster = "0.3.0"
unicode-segmentation = "1.11.0"
# TODO: Is this still the most up-to-date crate for this?
xi-unicode = "0.3.0"
tracing-subscriber = "0.3.18"

[dev-dependencies]
float-cmp = { version = "0.8.0", features = ["std"], default-features = false }
insta = { version = "1.8.0" }
assert_matches = "1.5.0"
tempfile = "3.10.1"

[[example]]
name = "simple_image"
#required-features = ["image", "png"]
