[package]
name = "masonry"
version = "0.2.0"
description = "Data-oriented Rust UI design toolkit."
keywords = ["gui", "ui", "toolkit"]
categories = ["gui", "internationalization", "accessibility"]
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
exclude = ["/doc/", ".gitignore"]

[package.metadata.docs.rs]
all-features = true
# rustdoc-scrape-examples tracking issue https://github.com/rust-lang/rust/issues/88791
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[lints]
workspace = true

[dependencies]
vello.workspace = true
wgpu.workspace = true
kurbo.workspace = true
parley.workspace = true
winit.workspace = true
smallvec.workspace = true
tracing.workspace = true
fnv.workspace = true
instant = { workspace = true, features = ["wasm-bindgen"] }
image.workspace = true
once_cell = "1.19.0"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
futures-intrusive = "0.5.0"
pollster = "0.3.0"
unicode-segmentation = "1.11.0"
# TODO: Is this still the most up-to-date crate for this?
xi-unicode = "0.3.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "time"] }
accesskit.workspace = true
accesskit_winit.workspace = true
time = { version = "0.3.36", features = ["macros", "formatting"] }

[dev-dependencies]
float-cmp = { version = "0.9.0", features = ["std"], default-features = false }
image = { workspace = true, features = ["png"] }
insta = { version = "1.38.0" }
assert_matches = "1.5.0"
tempfile = "3.10.1"

[[example]]
name = "simple_image"
#required-features = ["image", "png"]
