[package]
name = "xilem_html"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"

[features]
default = ["typed"]
typed = [
    'web-sys/FocusEvent',
    'web-sys/HtmlAnchorElement',
    'web-sys/HtmlAreaElement',
    'web-sys/HtmlAudioElement',
    'web-sys/HtmlBrElement',
    'web-sys/HtmlButtonElement',
    'web-sys/HtmlCanvasElement',
    'web-sys/HtmlDataElement',
    'web-sys/HtmlDataListElement',
    'web-sys/HtmlDetailsElement',
    'web-sys/HtmlDialogElement',
    'web-sys/HtmlDivElement',
    'web-sys/HtmlDListElement',
    'web-sys/HtmlEmbedElement',
    'web-sys/HtmlFieldSetElement',
    'web-sys/HtmlFormElement',
    'web-sys/HtmlHeadingElement',
    'web-sys/HtmlHrElement',
    'web-sys/HtmlIFrameElement',
    'web-sys/HtmlImageElement',
    'web-sys/HtmlInputElement',
    'web-sys/HtmlLabelElement',
    'web-sys/HtmlLegendElement',
    'web-sys/HtmlLiElement',
    'web-sys/HtmlMapElement',
    'web-sys/HtmlMenuElement',
    'web-sys/HtmlMeterElement',
    'web-sys/HtmlModElement',
    'web-sys/HtmlObjectElement',
    'web-sys/HtmlOListElement',
    'web-sys/HtmlOptGroupElement',
    'web-sys/HtmlOptionElement',
    'web-sys/HtmlOutputElement',
    'web-sys/HtmlParagraphElement',
    'web-sys/HtmlPictureElement',
    'web-sys/HtmlPreElement',
    'web-sys/HtmlProgressElement',
    'web-sys/HtmlQuoteElement',
    'web-sys/HtmlScriptElement',
    'web-sys/HtmlSelectElement',
    'web-sys/HtmlSlotElement',
    'web-sys/HtmlSourceElement',
    'web-sys/HtmlSpanElement',
    'web-sys/HtmlTableElement',
    'web-sys/HtmlTableCellElement',
    'web-sys/HtmlTableColElement',
    'web-sys/HtmlTableCaptionElement',
    'web-sys/HtmlTableRowElement',
    'web-sys/HtmlTableSectionElement',
    'web-sys/HtmlTemplateElement',
    'web-sys/HtmlTextAreaElement',
    'web-sys/HtmlTimeElement',
    'web-sys/HtmlTrackElement',
    'web-sys/HtmlUListElement',
    'web-sys/HtmlVideoElement',
    'web-sys/InputEvent',
    'web-sys/KeyboardEvent',
    'web-sys/MouseEvent',
    'web-sys/PointerEvent',
    'web-sys/WheelEvent',
]

[dependencies]
bitflags = "1.3.2"
wasm-bindgen = "0.2.87"
kurbo = "0.9.1"
xilem_core = { path = "../xilem_core" }
log = "0.4.19"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'console',
    'Document',
    'Element',
    'Event',
    'HtmlElement',
    'Node',
    'NodeList',
    'SvgElement',
    'Text',
    'Window',
]
