[package]
name = "xilem_html"
version = "0.1.0"
description = "HTML DOM frontend for the Xilem Rust UI framework."
keywords = ["xilem", "html", "dom", "web", "ui"]
categories = ["gui", "web-programming"]
publish = false # Until it's ready
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
xilem_core.workspace = true
kurbo.workspace = true
bitflags = "2"
wasm-bindgen = "0.2.87"
log = "0.4.19"
gloo = { version = "0.8.1", default-features = false, features = ["events", "utils"] }

# TODO make all or most of the extra elements and events optional via a feature
# I think that at least HtmlElement + SvgElement (and the parent dom interfaces) should be enabled by default
# possibly all web_sys elements, but that needs careful benching/investigation etc.
[dependencies.web-sys]
version = "0.3.4"
features = [
    "console",
    "Document",
    "Element",
    "Event",
    "HtmlElement",
    "Node",
    "NodeList",
    "SvgElement",
    "Text",
    "Window",
    "FocusEvent",
    "HtmlAnchorElement",
    "HtmlAreaElement",
    "HtmlAudioElement",
    "HtmlBrElement",
    "HtmlButtonElement",
    "HtmlCanvasElement",
    "HtmlDataElement",
    "HtmlDataListElement",
    "HtmlDetailsElement",
    "HtmlDialogElement",
    "HtmlDivElement",
    "HtmlDListElement",
    "HtmlEmbedElement",
    "HtmlFieldSetElement",
    "HtmlFormElement",
    "HtmlHeadingElement",
    "HtmlHrElement",
    "HtmlIFrameElement",
    "HtmlImageElement",
    "HtmlInputElement",
    "HtmlLabelElement",
    "HtmlLegendElement",
    "HtmlLiElement",
    "HtmlMapElement",
    "HtmlMenuElement",
    "HtmlMeterElement",
    "HtmlModElement",
    "HtmlObjectElement",
    "HtmlOListElement",
    "HtmlOptGroupElement",
    "HtmlOptionElement",
    "HtmlOutputElement",
    "HtmlParagraphElement",
    "HtmlPictureElement",
    "HtmlPreElement",
    "HtmlProgressElement",
    "HtmlQuoteElement",
    "HtmlScriptElement",
    "HtmlSelectElement",
    "HtmlSlotElement",
    "HtmlSourceElement",
    "HtmlSpanElement",
    "HtmlTableElement",
    "HtmlTableCellElement",
    "HtmlTableColElement",
    "HtmlTableCaptionElement",
    "HtmlTableRowElement",
    "HtmlTableSectionElement",
    "HtmlTemplateElement",
    "HtmlTextAreaElement",
    "HtmlTimeElement",
    "HtmlTrackElement",
    "HtmlUListElement",
    "HtmlVideoElement",
    "InputEvent",
    "KeyboardEvent",
    "MouseEvent",
    "PointerEvent",
    "WheelEvent"
]
